--- a/src/main/resources/templates/customers/addCustomer-form.html
+++ b/src/main/resources/templates/customers/addCustomer-form.html
@@ -7,11 +7,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Save Customer</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+
+
+    <script th:replace="fragments/header :: headerElement"></script>
+    <script th:replace="fragments/navbar :: navbarElement"></script>
+    <!--Footer needs to be redesigned
+    <script th:replace="fragments/footer :: footerElement"></script>
+    -->
 
 </head>
 <body>
@@ -23,47 +25,79 @@
 
     <p class="h4 mb-4">Save Customer</p>
 
-    <form action="#" th:action="@{/customers/save}" th:object="${customer}" method="POST">     <!-- enctype="multipart/form-data"> -->
+    <form action="#" class="row g-3" th:action="@{/customers/save}" th:object="${customer}" method="POST">
+        <!-- enctype="multipart/form-data"> -->
+
         <!--Hidden field is required for update. Tells the system which employee to update -->
         <input type="hidden" th:field="*{id}">
 
-        <input type="text" th:field="*{companyName}"
-        class="form-control mb-4 w-25" placeholder="Company Name">
+        <div class="col-md-6">
+            <label for="companyName" class="form-label">Company Name</label>
+            <input type="text" th:field="*{companyName}" class="form-control" id="companyName"
+                   placeholder="Company Name">
+        </div>
 
-        <input type="number" th:field="*{companyNumber}"
-               class="form-control mb-4 w-25" placeholder="Company Number">
+        <div class="col-md-6">
+            <label for="companyNumber" class="form-label">Company Number</label>
+            <input type="text" th:field="*{companyNumber}" class="form-control" id="companyNumber"
+                   placeholder="Company Number">
+        </div>
 
-        <input type="text" th:field="*{address}"
-               class="form-control mb-4 w-25" placeholder="Company Address">
+        <div class="col-12">
+            <label for="address" class="form-label" placeholder="Company Address">Address</label>
+                <input type="text" th:field="*{address}" class="form-control" id="address"
+                       placeholder="151 Katherine Str...">
+        </div>
 
-        <input type="text" th:field="*{decisionMaker}"
-               class="form-control mb-4 w-25" placeholder="Decision Maker">
+        <div class="col-12">
+            <label for="addressLine2" class="form-label">Address Line 2</label>
+                <input type="text" th:field="*{decisionMaker}" class="form-control" id="addressLine2"
+                       placeholder="Vunani Business Park...">
+        </div>
 
-        <input type="text" th:field="*{previousCourier}"
-               class="form-control mb-4 w-25" placeholder="Previous Courier">
-<!-- ======To revisit document Upload ===== >
-        <label for="fileUpload">Upload CIPC Docs</label>
-        <input type="file" id="fileUpload" name="fileUpload" accept=".pdf,.doc,.docx" th:field="*{companyRegistrationDocs}"
-               class="form-control mb-4 w-25" placeholder="CIPC Docs">
-                <input type="file" th:field="*{companyRegistrationDocs}"
-               class="form-control mb-4 w-25" placeholder="CIPC Docs">
+        <div class="col-md-6">
+            <label for="previousCourier" class="form-label">Previous Courier</label>
+            <input type="text" th:field="*{previousCourier}" class="form-control" id="previousCourier"
+                   placeholder="Previous Courier">
+        </div>
 
-        <label for="fileUpload1">Credit App Docs</label>
-        <input type="file" id="fileUpload1" name="fileUpload1" accept=".pdf,.doc,.docx" th:field="*{creditApp}"
-               class="form-control mb-4 w-25" placeholder="Credit App">
-    ================================================================================================================== -->
+        <div class="col-md-2">
+            <label for="currentMonthShipments" class="form-label">Current Month Shipments</label>
+            <input type="text" th:field="*{currentMonthShipments}"  class="form-control" id="currentMonthShipments"
+                   placeholder="Number of Shipments">
+        </div>
 
-        <input type="text" th:field="*{openInvoices}"
-               class="form-control mb-4 w-25" placeholder="Open invoice Numbers">
+        <div class="col-md-2">
+            <label for="openInvoiceValue" class="form-label">Open Invoice Value</label>
+            <input type="text" th:field="*{openInvoiceValue}" class="form-control" id="openInvoiceValue"
+                   placeholder="Open Invoice Value">
+        </div>
 
-        <input type="number" th:field="*{openInvoiceValue}"
-               class="form-control mb-4 w-25" placeholder="Open Invoice Value">
+        <div class="col-md-2">
+            <label for="currentInvoiceValue" class="form-label">Current Month's Billing</label>
+            <input type="text" th:field="*{currentInvoiceValue}" class="form-control" id="currentInvoiceValue"
+                   placeholder="Current Month's Billing">
+        </div>
 
-        <input type="number" th:field="*{currentInvoiceValue}"
-               class="form-control mb-4 w-25" placeholder="Current Month's Billing">
+        <div class="col-md-12">
+            <label for="notes" class="form-label">Notes</label>
+            <input type="text" th:field="*{notes}" class="form-control" id="notes"
+                   placeholder="Notes">
+        </div>
 
-        <input type="text" th:field="*{notes}"
-               class="form-control mb-4 w-25" placeholder="Notes">
+        <!-- ======To revisit document Upload ===== >
+                <label for="fileUpload">Upload CIPC Docs</label>
+                <input type="file" id="fileUpload" name="fileUpload" accept=".pdf,.doc,.docx" th:field="*{companyRegistrationDocs}"
+                       class="form-control mb-4 w-25" placeholder="CIPC Docs">
+                        <input type="file" th:field="*{companyRegistrationDocs}"
+                       class="form-control mb-4 w-25" placeholder="CIPC Docs">
+
+                <label for="fileUpload1">Credit App Docs</label>
+                <input type="file" id="fileUpload1" name="fileUpload1" accept=".pdf,.doc,.docx" th:field="*{creditApp}"
+                       class="form-control mb-4 w-25" placeholder="Credit App">
+            ================================================================================================================== -->
+
+
 
         <button type="submit" class="btn btn-info col-2">Save</button>
 
@@ -76,7 +110,6 @@
 
 </div>
 
-
-
 </body>
+
 </html>
